--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -9,6 +9,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  height: 10%;
   z-index: 50;
   background-color: #ffffff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
@@ -27,15 +28,20 @@
 
 .logo {
   text-decoration: none;
-  margin-left: -30%;
+  position:absolute;
+  left:10px;
 }
 
 .logo-img {
   width: 90px;
   height: auto;
+  padding-top: 8vh;
 }
 
 .nav {
+  padding-top: 10vh;
+  position:absolute;
+  right:10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
